--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div>
+      <!-- navbar -->
       <nav class="nav_container">
         <section class="nav_logo">
           <img
@@ -40,8 +41,8 @@
 
         <section class="nav_notification">
           <svg
-            width="30"
-            height="30"
+            width="25"
+            height="25"
             viewBox="0 0 21 20"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
@@ -60,6 +61,66 @@
           </div>
         </section>
       </nav>
+
+      <!-- dropdown menu -->
+      <div class="menu">
+        <section class="menu_section1">
+          <div class="menu_section1-dc">
+            <p>DC</p>
+            <p>Davii Collections</p>
+            <svg
+              width="30"
+              height="30"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <circle cx="12" cy="12" r="10" fill="#f1f1f1"></circle>
+              <path
+                d="M17.2738 8.52629C17.6643 8.91682 17.6643 9.54998 17.2738 9.94051L11.4405 15.7738C11.05 16.1644 10.4168 16.1644 10.0263 15.7738L7.3596 13.1072C6.96908 12.7166 6.96908 12.0835 7.3596 11.693C7.75013 11.3024 8.38329 11.3024 8.77382 11.693L10.7334 13.6525L15.8596 8.52629C16.2501 8.13577 16.8833 8.13577 17.2738 8.52629Z"
+                fill="#1a1a1a"
+              ></path>
+            </svg>
+          </div>
+
+          <div class="menu_section1-stories">
+            <svg
+              width="30"
+              height="30"
+              viewBox="0 0 21 20"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M13.757 3H7.24302C6.85944 3 6.4971 3.17611 6.26012 3.47772L3.87394 6.51468C3.63169 6.823 3.5 7.20375 3.5 7.59586V8.25C3.5 9.31867 4.10958 10.245 5 10.7001V15.25C5 16.2165 5.7835 17 6.75 17H14.25C15.2165 17 16 16.2165 16 15.25V10.7001C16.8904 10.245 17.5 9.31867 17.5 8.25V7.76879C17.5 7.26465 17.3307 6.77511 17.0192 6.3787L14.7399 3.47772C14.5029 3.17611 14.1406 3 13.757 3ZM13.5 15.5H14.25C14.3881 15.5 14.5 15.3881 14.5 15.25V11C13.712 11 13.0014 10.6686 12.5 10.1375C11.9986 10.6686 11.288 11 10.5 11C9.71199 11 9.00138 10.6686 8.5 10.1375C7.99862 10.6686 7.28801 11 6.5 11V15.25C6.5 15.3881 6.61193 15.5 6.75 15.5H10.5V13C10.5 12.4477 10.9477 12 11.5 12H12.5C13.0523 12 13.5 12.4477 13.5 13V15.5ZM6.5 9.5H6.25C5.55964 9.5 5 8.94036 5 8.25V7.59586C5 7.53985 5.01881 7.48545 5.05342 7.44141L7.36453 4.5H13.6355L15.8397 7.30543C15.9436 7.43757 16 7.60075 16 7.76879V8.25C16 8.94036 15.4404 9.5 14.75 9.5H14.5C13.8096 9.5 13.25 8.94036 13.25 8.25V7.75C13.25 7.33579 12.9142 7 12.5 7C12.0858 7 11.75 7.33579 11.75 7.75V8.25C11.75 8.94036 11.1904 9.5 10.5 9.5C9.80964 9.5 9.25 8.94036 9.25 8.25V7.75C9.25 7.33579 8.91421 7 8.5 7C8.08579 7 7.75 7.33579 7.75 7.75V8.25C7.75 8.94036 7.19036 9.5 6.5 9.5Z"
+                fill="#1a1a1a"
+              />
+            </svg>
+            <p>All stores</p>
+          </div>
+        </section>
+        <hr />
+
+        <section class="menu_section2">
+          <p>Help Center</p>
+          <p>Changelog</p>
+          <p class="test">Community forums</p>
+          <p>Hire a Shopify Partner</p>
+          <p>Keyboard shortcuts</p>
+        </section>
+        <hr />
+
+        <section class="menu_section3">
+          <div class="menu_section3-email">
+            <p>David Micheal</p>
+            <p>davidmicheal@gmail.com</p>
+          </div>
+          <p>Manage account</p>
+          <p>Log out</p>
+        </section>
+      </div>
     </div>
   </body>
 </html>
