add setup-guide feature

--- a/index.html
+++ b/index.html
@@ -11,15 +11,7 @@
       <!-- navbar -->
       <nav class="nav_container">
         <section class="nav_logo">
-          <!-- <img
-            src="https://crushingit.tech/hackathon-assets/shopify-icon-desktop.svg"
-            alt="shopify-logo"
-          />
-          <img
-            src="https://crushingit.tech/hackathon-assets/shopify-icon.svg"
-            alt="shopify-logo"
-          /> -->
-
+          
           <svg
             fill="none"
             height="30"
@@ -251,6 +243,166 @@
           />
         </svg>
       </div>
+
+      <!-- setup guide -->
+      <main class="setup_guide">
+        <section class="setup_guide-section1">
+          <h3>Setup guide</h3>
+          <p>Use this personalized guide to get your store up and running.</p>
+          <div class="setup_guide-progress">
+            <p>1 / 5 completed</p>
+            <input type="range" />
+          </div>
+        </section>
+
+        <section class="setup_guide-section2">
+          <div class="setup_guide-tasks">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+            >
+              <circle
+                cx="12"
+                cy="12"
+                r="10"
+                stroke="#8A8A8A"
+                stroke-width="2.08333"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-dasharray="5 5"
+              />
+            </svg>
+            <p>Customize your online store</p>
+          </div>
+
+          <div class="setup_guide-tasks">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+            >
+              <circle
+                cx="12"
+                cy="12"
+                r="10"
+                stroke="#8A8A8A"
+                stroke-width="2.08333"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-dasharray="5 5"
+              />
+            </svg>
+            <p>Add your first product</p>
+          </div>
+
+          <div class="setup_guide-tasks">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+            >
+              <circle
+                cx="12"
+                cy="12"
+                r="10"
+                stroke="#8A8A8A"
+                stroke-width="2.08333"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-dasharray="5 5"
+              />
+            </svg>
+            <p>Add a custom domain</p>
+          </div>
+
+          <div class="setup_guide-tasks">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+            >
+              <circle
+                cx="12"
+                cy="12"
+                r="10"
+                stroke="#8A8A8A"
+                stroke-width="2.08333"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-dasharray="5 5"
+              />
+            </svg>
+            <p>Name your store</p>
+          </div>
+
+          <div class="active">
+            <div class="setup_guide-tasks">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+              >
+                <circle
+                  cx="12"
+                  cy="12"
+                  r="10"
+                  stroke="#8A8A8A"
+                  stroke-width="2.08333"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-dasharray="5 5"
+                />
+              </svg>
+              <p>Set up a payment provider</p>
+            </div>
+
+            <div class="setup_guide-tasks_view">
+              <div>
+                <div class="setup_guide-tasks_view_text">
+                  <p>
+                    Choose a payment provider to start accepting payments.
+                    You’ll need to create an account with the payment provider
+                    and set it up with your Shopify store.
+                    <a class="setup_guide-tasks_view_link" href="#">Learn more</a>
+                  </p>
+                </div>
+                <img
+                  class="setup_guide-tasks_view_img"
+                  src="https://crushingit.tech/hackathon-assets/payment.png"
+                  alt="image"
+                />
+              </div>
+              <button>Set up payment</button>
+            </div>
+          </div>
+        </section>
+
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="20"
+          height="20"
+          viewBox="0 0 20 20"
+          fill="none"
+        >
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M5.71967 8.46967C6.01256 8.17678 6.48744 8.17678 6.78033 8.46967L10.25 11.9393L13.7197 8.46967C14.0126 8.17678 14.4874 8.17678 14.7803 8.46967C15.0732 8.76256 15.0732 9.23744 14.7803 9.53033L10.7803 13.5303C10.4874 13.8232 10.0126 13.8232 9.71967 13.5303L5.71967 9.53033C5.42678 9.23744 5.42678 8.76256 5.71967 8.46967Z"
+            fill="#4A4A4A"
+          />
+        </svg>
+      </main>
     </div>
   </body>
 </html>
